# brigantine

./: .flake8  LICENSE  Pipfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/assets/: apt_pkglist
brigantine/: machine.py
brigantine/config/: __init__.py  common.py  kinematics.py  machine.py  mcu.py  tools.py
test/app/: test_main.py
test/brigantine/: test_console.py
test/brigantine/config/: test_tools.py
tests/assets/: config_good.yaml
tests/brigantine/: test_console.py
tests/brigantine/config/: test_kinematics.py  test_mcu.py  test_models.py  test_tools.py
